ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: k3s-flask
    http:
      paths:
      - backend:
          serviceName: qubitro-landing
          servicePort: 80
  tls:
  - hosts:
    - k3s-flask
    secretName: letsencrypt-prod
